Insert oats img and insert ingredients
Essentially, I added the image to the overnightOats.html webpage, as
well as adding the ingredients so that there is at least an idea on how
to actually make the recipe. Although, I did not put the entire recipe.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipies</h1>
-    <a href="recipes/overnightOats">Overnight Oats Recipe!</a>
+    <a href="../odin-recipies/recipies/overnightOats.html">Overnight Oats Recipe!</a>
+  
 </body>
 </html>
